# APPNA

backend/: .env  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 242129d15151_auto_gen.py  52ca8183bac9_initial_tables.py  fd1cce0adee3_add_refresh_token_to_users_table.py
backend/app/: main.py
backend/app/api/v1/endpoints/: health.py
backend/app/api/v1/endpoints/auth/: account_status.py  change_password.py  login.py  logout.py  me.py  refresh.py  register.py  reset_password.py  verify_email.py
backend/app/api/v1/endpoints/committees/: add_committee_member.py  assign_chair.py  committee_activity.py  create_committee.py  delete_committee.py  list_committees.py  remove_committee_member.py  update_committee.py  view_committee.py
backend/app/api/v1/endpoints/crm/: add_member.py  delete_member.py  export_members.py  filter_members.py  import_members.py  list_members.py  search_members.py  update_member.py  view_member.py
backend/app/api/v1/endpoints/email/: email_services.py
backend/app/api/v2/endpoints/: health.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  base.py  chapter.py  committee.py  documents.py  events.py  meeting.py  member.py  notifications.py  role.py  tasks.py  token_blacklist.py  user.py
backend/app/schemas/: auth.py  committee.py  meeting.py  user.py
backend/app/services/: email.py  email_service.py
backend/tests/: test_committees.py  test_crm.py  test_db.py  test_meetings.py
(+63 files in other folders)
